layout issue

--- a/index.scss
+++ b/index.scss
@@ -8,6 +8,14 @@ $montserrat: 'Montserrat', sans-serif;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+    &:active { 
+      background: none;
+      border: none;
+    }
+    &:focus { 
+      background: none;
+      border: none;
+    }
 }
 html { 
   scroll-behavior: smooth;
